--- a/test_1/test_1/test_1.vcxproj
+++ b/test_1/test_1/test_1.vcxproj
@@ -11,8 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{D019C2E9-72BA-4DBE-8709-46A13AD151EE}</ProjectGuid>
-    <RootNamespace>tast</RootNamespace>
+    <ProjectGuid>{46566617-627C-48A2-B76C-D86E41503325}</ProjectGuid>
+    <RootNamespace>test_1</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -65,7 +65,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="tast.cpp" />
+    <ClCompile Include="test_1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
