--- a/test_1/test_1/test_1.vcxproj.filters
+++ b/test_1/test_1/test_1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="tast.cpp">
+    <ClCompile Include="test_1.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
